--- a/.github/workflows/lint-shell.yml
+++ b/.github/workflows/lint-shell.yml
@@ -13,7 +13,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run ShellCheck
         run: |
-          find . -type f -name '*.sh' | xargs -n 1 sh -n
+          for file in $(find . -type f -name '*.sh'); do
+            echo "::group::${file}"
+            echo "Checking ${file}"
+            sh -n "${file}"
+            echo "::endgroup::"
+          done
   shellcheck:
     name: shellcheck
     runs-on: ubuntu-latest
