--- a/.github/workflows/lint-shell.yml
+++ b/.github/workflows/lint-shell.yml
@@ -7,11 +7,11 @@ permissions:
 
 jobs:
   sh:
-    name: sh-noexec-verify
+    name: sh-verify-syntax
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run ShellCheck
+      - name: Verify script syntax
         run: |
           for file in $(find . -type f -name '*.sh'); do
             echo "::group::${file}"
