--- a/.github/workflows/lint-shell.yml
+++ b/.github/workflows/lint-shell.yml
@@ -7,18 +7,11 @@ permissions:
 
 jobs:
   sh:
-    name: sh-noexec-verify
+    name: simple-shell-syntax-check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run ShellCheck
-        run: |
-          for file in $(find . -type f -name '*.sh'); do
-            echo "::group::${file}"
-            echo "Checking ${file}"
-            sh -n "${file}"
-            echo "::endgroup::"
-          done
+      - uses: Klintrup/simple-shell-syntax-check@v1
   shellcheck:
     name: shellcheck
     runs-on: ubuntu-latest
