--- a/.github/workflows/lint-shell.yml
+++ b/.github/workflows/lint-shell.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Klintrup/simple-shell-syntax-check@v2
+        with:
+          install_missing_shell: true
   shellcheck:
     name: shellcheck
     runs-on: ubuntu-latest
